--- a/app/src/main/res/layout/fragment_quake.xml
+++ b/app/src/main/res/layout/fragment_quake.xml
@@ -45,7 +45,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/card_view_info" />
+        app:layout_constraintTop_toBottomOf="@+id/card_view_information"
+        tools:listitem="@layout/card_view_quake" />
 
 
     <com.google.android.gms.ads.AdView
