Splash screen oficial API
Signed-off-by: Felipe Gonzalez Alarcon <felipe.gonzalezalarcon94@gmail.com>

Took 48 minutes

--- a/app/src/main/res/layout/card_view_quake.xml
+++ b/app/src/main/res/layout/card_view_quake.xml
@@ -8,8 +8,7 @@
     android:clickable="true"
     android:elevation="0dp"
     android:focusable="true"
-    android:foreground="?attr/selectableItemBackground"
-    android:theme="@style/AppTheme">
+    android:foreground="?attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/iv_mag_color"
