--- a/app/src/main/res/layout/overlay.xml
+++ b/app/src/main/res/layout/overlay.xml
@@ -2,5 +2,4 @@
     android:layout_width="0dp"
     android:layout_height="0dp"
     android:alpha="0.85"
-    android:elevation="5dp"
-    android:theme="@style/OverlayTheme" />
+    android:elevation="5dp" />
