Styles corregidos, archivos pasados a kotlin y settings activity funcionando
Signed-off-by: Felipe Gonzalez Alarcon <felipe.gonzalezalarcon94@gmail.com>

Took 3 hours 44 minutes

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -4,8 +4,12 @@
     <!-- Night Color-->
     <color name="colorPrimary">#253561</color>
     <color name="colorPrimaryVariant">#1C2746</color>
+
     <color name="colorSecondary">#006994</color>
+
     <color name="colorSurface">#323236</color>
+    <color name="colorOnSurface">#8CFFFFFF</color>
+
     <color name="background">#28282C</color>
 
 </resources>
