--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -1,42 +1,37 @@
 <resources>
 
-    <!-- Base application theme
-    <style name="AppTheme" parent="Theme.MaterialComponents.NoActionBar">
+    <!--
+       PARTICULAR
+       DESDE AQUI A ABAJO
+   -->
+    <style name="AppTheme" parent="BaseTheme">
 
-        <item name="android:fontFamily">@font/roboto</item>
-
-        <item name="colorPrimary">@color/colorPrimaryNightMode</item>
-        <item name="colorPrimaryVariant">@color/colorPrimaryVariantNightMode</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
         <item name="colorOnPrimary">@color/colorOnPrimary</item>
-        <item name="android:statusBarColor">@color/colorPrimaryVariantNightMode</item>
+        <item name="android:statusBarColor">@color/colorPrimaryVariant</item>
 
-        <item name="colorSecondary">@color/colorSecondaryNightMode</item>
-        <item name="colorOnSecondary">@color/colorOnSecondary</item>
+        <item name="colorSecondary">@color/colorSecondary</item>
 
-        <item name="colorSurface">@color/colorSurfaceNightMode</item>
+        <item name="colorSurface">@color/colorSurface</item>
         <item name="colorOnSurface">@color/colorOnSurface</item>
 
-        <item name="materialButtonStyle">@style/ButtonTheme</item>
+        <!-- Background -->
+        <item name="android:windowBackground">@color/background</item>
 
-        <item name="android:windowBackground">@color/backgroundNightMode</item>
-
+        <!-- Toolbar Style -->
+        <item name="toolbarStyle">@style/Widget.App.Toolbar</item>
     </style>
 
-    <style name="ButtonTheme" parent="Widget.MaterialComponents.Button">
-
-        <item name="backgroundTint">@color/colorSecondaryNightMode</item>
-        <item name="android:textColor">@color/colorOnSecondary</item>
+    <!-- Toolbar Theming Light -->
+    <style name="Widget.App.Toolbar" parent="Widget.MaterialComponents.Toolbar.Primary">
+        <item name="materialThemeOverlay">@style/ThemeOverlay.App.Toolbar</item>
     </style>
 
-    <style name="ToolbarTheme" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar">
-        <item name="android:background">@color/colorPrimaryNightMode</item>
+    <style name="ThemeOverlay.App.Toolbar" parent="">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
+        <item name="colorOnPrimary">@color/colorOnSurface</item>
     </style>
 
-    <style name="InfoWindowsTheme" parent="ThemeOverlay.MaterialComponents.Dark">
-        <item name="android:background">@color/backgroundNightMode</item>
-    </style>
-
-    <style name="OverlayTheme" parent="ThemeOverlay.MaterialComponents.Dark">
-        <item name="android:background">@color/colorPrimaryNightMode</item>
-    </style>-->
 </resources>
