--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -4,6 +4,7 @@
     <!-- Night Color-->
     <color name="colorPrimary">#253561</color>
     <color name="colorPrimaryVariant">#1C2746</color>
+    <color name="colorOnPrimary">#FFFFFF</color>
 
     <color name="colorSecondary">#006994</color>
 
