Eliminacion de paquetes innecesarios y reorganizacion de archivos
Signed-off-by: Felipe Gonzalez Alarcon <felipe.gonzalezalarcon94@gmail.com>

Took 1 hour 18 minutes

--- a/app/src/main/res/layout/fragment_maps_new.xml
+++ b/app/src/main/res/layout/fragment_maps_new.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.fragments.MapsFragmentNew">
+    tools:context=".quake_feature.ui.MapsFragmentNew">
 
     <!-- own view of map to solve scrolling with viewpager2-->
-    <cl.figonzal.lastquakechile.views.MapViewInScroll
+    <cl.figonzal.lastquakechile.core.ui.MapViewInScroll
         android:id="@+id/map_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
