--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -6,5 +6,4 @@
     android:layout_gravity="top"
     android:layout_marginBottom="?attr/actionBarSize"
     android:background="@android:color/transparent"
-    app:layout_collapseMode="pin"
-    app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />
+    app:layout_collapseMode="pin" />
