--- a/app/src/main/res/layout/activity_quake_details.xml
+++ b/app/src/main/res/layout/activity_quake_details.xml
@@ -15,6 +15,33 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_share"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:contentDescription="@string/boton_compartir_sismo"
+        android:visibility="visible"
+        app:backgroundTintMode="src_atop"
+        app:elevation="7dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:rippleColor="@color/colorPrimaryVariant"
+        app:srcCompat="@drawable/ic_share_24px"
+        app:tint="@color/white" />
+
+    <include
+        android:id="@+id/overlay"
+        layout="@layout/overlay"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nested_scroll"
         android:layout_width="0dp"
@@ -58,7 +85,7 @@
                 layout="@layout/card_view_mapview"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginTop="65dp"
+                android:layout_marginTop="45dp"
                 android:layout_marginBottom="4dp"
                 app:layout_constraintBottom_toTopOf="@+id/horizontal_guide"
                 app:layout_constraintEnd_toStartOf="@+id/right_guide"
