--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -74,13 +74,17 @@
 
     </style>
 
-    <!-- Button light style -->
+    <!-- Button style -->
     <style name="Widget.App.Button" parent="Widget.MaterialComponents.Button">
 
-        <item name="backgroundTint">?attr/colorSecondary</item>
-        <item name="android:textColor">?attr/colorOnSecondary</item>
+        <item name="materialThemeOverlay">@style/ThemeOverlay.App.Button</item>
         <item name="android:textAppearance">?attr/textAppearanceButton</item>
         <item name="shapeAppearance">@style/ShapeAppearance.LastQuakeChile.Button</item>
+    </style>
+
+    <style name="ThemeOverlay.App.Button" parent="">
+        <item name="colorPrimary">@color/colorSecondary</item>
+        <item name="colorOnPrimary">@color/colorOnSecondary</item>
     </style>
 
     <!-- Toolbar Theming Light -->
