--- a/app/src/main/res/layout/activity_quake_details.xml
+++ b/app/src/main/res/layout/activity_quake_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.activities.QuakeDetailsActivity">
+    tools:context=".quake_feature.ui.QuakeDetailsActivity">
 
     <include
         android:id="@+id/include_toolbar"
