--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -7,10 +7,13 @@
     <color name="colorOnPrimary">#FFFFFF</color>
 
     <color name="colorSecondary">#006994</color>
+    <color name="colorOnSecondary">#FFFFFF</color>
 
     <color name="colorSurface">#323236</color>
     <color name="colorOnSurface">#8CFFFFFF</color>
 
     <color name="background">#28282C</color>
+
+    <color name="changeLogDivider">#4DB3B3B3</color>
 
 </resources>
