--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,12 @@
     <color name="green_dark">#008e4d</color>
     <color name="green_dark_night">#006034</color>
 
+    <color name="changeLogDivider">#80D8D8D8</color>
+
+    <color name="changeLogIconRelease">#CD03A9F4</color>
+
+    <color name="badgeGreen">#9A8BC34A</color>
+
     <!-- Colores para cada magnitud-->
     <color name="magnitude1">#006400</color>
     <color name="magnitude2">#2a7900</color>
