Collapsing toolbar funcionando como antes pero con MaterialToolbar
Signed-off-by: Felipe Gonzalez Alarcon <felipe.gonzalezalarcon94@gmail.com>

Took 47 minutes

--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -1,4 +1,4 @@
-<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.appbar.MaterialToolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/tool_bar"
     android:layout_width="match_parent"
@@ -6,4 +6,6 @@
     android:layout_gravity="top"
     android:layout_marginBottom="?attr/actionBarSize"
     android:background="@android:color/transparent"
-    app:layout_collapseMode="pin" />
+    android:elevation="0dp"
+    app:layout_collapseMode="pin"
+    app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight" />
