Implementacion de Diff Utils, correccion de map en QuakeDetailsActivity.kt e InfoWindows en modo noche
Signed-off-by: Felipe Gonzalez Alarcon <felipe.gonzalezalarcon94@gmail.com>

Took 1 hour 9 minutes

--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".quake_feature.ui.MapsFragmentNew">
+    tools:context=".quake_feature.ui.MapsFragment">
 
     <!-- own view of map to solve scrolling with viewpager2-->
     <cl.figonzal.lastquakechile.core.ui.MapViewInScroll
