--- a/app/src/main/res/layout-night/info_windows.xml
+++ b/app/src/main/res/layout-night/info_windows.xml
@@ -3,7 +3,8 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/background">
 
     <ImageView
         android:id="@+id/iv_iw_mag_color"
@@ -39,11 +40,11 @@
         android:id="@+id/tv_iw_magnitude"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         android:maxLength="4"
         android:textColor="@android:color/white"
         android:textSize="14sp"
         android:textStyle="normal"
-        android:background="@android:color/transparent"
         card_view:layout_constraintBottom_toBottomOf="@+id/iv_iw_mag_color"
         card_view:layout_constraintEnd_toEndOf="@+id/iv_iw_mag_color"
         card_view:layout_constraintStart_toStartOf="@+id/iv_iw_mag_color"
