--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -3,13 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:fitsSystemWindows="true">
 
     <!-- AppBar -->
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true">
 
         <!-- Permite el colapso del toolbar de la activity -->
         <com.google.android.material.appbar.CollapsingToolbarLayout
@@ -20,13 +22,14 @@
             android:fitsSystemWindows="true"
             app:expandedTitleGravity="bottom"
             app:expandedTitleMarginBottom="?attr/actionBarSize"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
             <ImageView
                 android:id="@+id/toolbar_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:contentDescription="@string/imagen_toolbar"
+                android:fitsSystemWindows="true"
                 android:foreground="#4D000000"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
