--- a/app/src/main/res/layout-night/info_windows.xml
+++ b/app/src/main/res/layout-night/info_windows.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/background">
+    android:background="@color/background"
+    tools:ignore="Overdraw">
 
     <ImageView
         android:id="@+id/iv_iw_mag_color"
