--- a/app/src/main/res/menu/fragment_map_menu.xml
+++ b/app/src/main/res/menu/fragment_map_menu.xml
@@ -7,7 +7,7 @@
         android:id="@+id/layers_menu"
         android:icon="@drawable/ic_baseline_layers_24"
         android:orderInCategory="1"
-        android:title="Estilo Mapa"
+        android:title="@string/estilo_mapa"
         app:showAsAction="always|collapseActionView"
         tools:ignore="AlwaysShowAction" />
 
