Se agrega limite a consulta de API
Signed-off-by: Felipe Gonzalez Alarcon <felipe.gonzalezalarcon94@gmail.com>

Took 1 hour 19 minutes

--- a/app/src/main/res/layout/activity_quake_details.xml
+++ b/app/src/main/res/layout/activity_quake_details.xml
@@ -94,7 +94,7 @@
 
             <include
                 android:id="@+id/include_cv_admob"
-                layout="@layout/card_view_admob"
+                layout="@layout/card_view_admob_details"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
